--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   <textarea readonly>$( -- host element selector -- ).superplayer({
   header: {
     text: 'My Music Player',
+    autoplay: true,
 	image: 'image.png' // optional
   }, // optional
   items: [
